--- a/app/src/main/res/layout/city_search_fragment.xml
+++ b/app/src/main/res/layout/city_search_fragment.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.city.CitiesFragment">
+    tools:context=".ui.citysearch.CitySearchFragment">
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/favorite_cities_list"
+        android:id="@+id/city_search_result_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
     <TextView
-        android:id="@+id/empty_list"
+        android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="gone"
-        android:text="@string/no_favorites_added"/>
+        android:visibility="gone" />
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/add_city"
+    <ProgressBar
+        android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:text="Add a City"/>
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
 </FrameLayout>
