show favorite cities

--- a/app/src/main/res/layout/favorite_cities_fragment.xml
+++ b/app/src/main/res/layout/favorite_cities_fragment.xml
@@ -3,18 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.city.CitiesFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.city.FavoriteCitiesFragment">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favorite_cities_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"
+        tools:listitem="@layout/single_city"
+        android:clipToPadding="false"
+        android:paddingBottom="72dp" />
+
     <TextView
         android:id="@+id/empty_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="gone"
-        android:text="@string/no_favorites_added"/>
+        android:text="@string/no_favorites_added"
+        android:visibility="gone" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/add_city"
@@ -22,6 +30,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:text="Add a City"/>
+        android:text="Add a City" />
 
 </FrameLayout>
