--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,9 +12,9 @@
         tools:layout="@layout/weather_fragment" />
     <fragment
         android:id="@+id/favorite_cities"
-        android:name="io.github.moh_mohsin.ahoyweatherapp.ui.city.CitiesFragment"
+        android:name="io.github.moh_mohsin.ahoyweatherapp.ui.city.FavoriteCitiesFragment"
         android:label="cities_fragment"
-        tools:layout="@layout/cities_fragment" />
+        tools:layout="@layout/favorite_cities_fragment" />
     <fragment
         android:id="@+id/citySearchFragment"
         android:name="io.github.moh_mohsin.ahoyweatherapp.ui.citysearch.CitySearchFragment"
