--- a/app/src/main/res/layout/city_search_fragment.xml
+++ b/app/src/main/res/layout/city_search_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.citysearch.CitySearchFragment">
+    tools:context=".ui.city.search.CitySearchFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/city_search_result_list"
