--- a/app/src/main/res/layout/favorite_cities_fragment.xml
+++ b/app/src/main/res/layout/favorite_cities_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.city.FavoriteCitiesFragment">
+    tools:context=".ui.city.favorite.FavoriteCitiesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favorite_cities_list"
