--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,12 +23,12 @@
 
     <fragment
         android:id="@+id/favorite_cities"
-        android:name="io.github.moh_mohsin.ahoyweatherapp.ui.city.FavoriteCitiesFragment"
+        android:name="io.github.moh_mohsin.ahoyweatherapp.ui.city.favorite.FavoriteCitiesFragment"
         android:label="@string/favorite_cities_label"
         tools:layout="@layout/favorite_cities_fragment" />
     <fragment
         android:id="@+id/citySearchFragment"
-        android:name="io.github.moh_mohsin.ahoyweatherapp.ui.citysearch.CitySearchFragment"
+        android:name="io.github.moh_mohsin.ahoyweatherapp.ui.city.search.CitySearchFragment"
         android:label="@string/search_label"
         tools:layout="@layout/city_search_fragment" />
 
