add a parent class WeatherFragment to remove duplicate code in weather fragments

--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent"
             android:visibility="gone"
             tools:visibility="visible"
-            tools:context=".ui.weather.WeatherFragment">
+            tools:context=".ui.weather.CurrentWeatherFragment">
 
 
             <TextView
