--- a/app/src/main/res/layout/favorite_cities_fragment.xml
+++ b/app/src/main/res/layout/favorite_cities_fragment.xml
@@ -6,23 +6,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.city.favorite.FavoriteCitiesFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/favorite_cities_list"
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/compose_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:orientation="vertical"
-        tools:listitem="@layout/single_city"
-        android:clipToPadding="false"
-        android:paddingBottom="72dp" />
-
-    <TextView
-        android:id="@+id/empty_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/no_favorites_added"
-        android:visibility="gone" />
+        android:layout_height="match_parent" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/add_city"
